[package]
name = "arbalest"
version = "0.1.0" # don't forget to update documentation link on bump
authors = ["Anthony Ramine <n.oxyde@gmail.com>", "The Rust Project Developers"]
description = "Like Arc<T> but where weak references don't forbid mutable access"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nox/arbalest"
documentation = "https://docs.rs/arbalest/0.1.0/"
readme = "README.md"
categories = ["Concurrency", "Data structures"]
keywords = ["arc", "atomic", "thread"]
exclude = ["/bors.toml", "/.travis.yml"]

[badges]
travis-ci = { repository = "nox/arbalest" }

[lib]
test = false
