[package]
name = "arbalest"
version = "0.1.1" # don't forget to update documentation link on bump
authors = ["Anthony Ramine <n.oxyde@gmail.com>", "The Rust Project Developers"]
description = "Like Arc<T> but where weak references don't forbid mutable access"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nox/arbalest"
documentation = "https://docs.rs/arbalest/0.1.1/"
readme = "README.md"
categories = ["concurrency", "data-structures"]
keywords = ["arc", "atomic", "thread"]
exclude = ["/bors.toml", "/.travis.yml"]

[lib]
test = false
